2024-10-29_exa/hello-exainfra-metrics-example/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-exainfra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello-exainfra.k8s.sikademo.com
      secretName: hello-exainfra.k8s.sikademo.com-tls
  rules:
    - host: hello-exainfra.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-exainfra
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: hello-exainfra
                port:
                  number: 8001
